; ModuleID = '/home/carl/AnghaBench/i3/src/extr_move.c_move_to_output_directed.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_move.c_move_to_output_directed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_18__ = type { i32 }
%struct.TYPE_17__ = type { i32 }

@CLOSEST_OUTPUT = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [48 x i8] c"No output in this direction found. Not moving.\0A\00", align 1
@child = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [61 x i8] c"No workspace on output in this direction found. Not moving.\0A\00", align 1
@focused = common dso_local global %struct.TYPE_18__* null, align 8
@.str.2 = private unnamed_addr constant [5 x i8] c"move\00", align 1
@croot = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_18__*, i32)* @move_to_output_directed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @move_to_output_directed(%struct.TYPE_18__* %0, i32 %1) #0 {
  %3 = alloca %struct.TYPE_18__*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.TYPE_17__*, align 8
  %6 = alloca %struct.TYPE_17__*, align 8
  %7 = alloca %struct.TYPE_18__*, align 8
  %8 = alloca %struct.TYPE_18__*, align 8
  %9 = alloca i32, align 4
  store %struct.TYPE_18__* %0, %struct.TYPE_18__** %3, align 8
  store i32 %1, i32* %4, align 4
  %10 = load %struct.TYPE_18__*, %struct.TYPE_18__** %3, align 8
  %11 = call %struct.TYPE_17__* @get_output_for_con(%struct.TYPE_18__* %10)
  store %struct.TYPE_17__* %11, %struct.TYPE_17__** %5, align 8
  %12 = load i32, i32* %4, align 4
  %13 = load %struct.TYPE_17__*, %struct.TYPE_17__** %5, align 8
  %14 = load i32, i32* @CLOSEST_OUTPUT, align 4
  %15 = call %struct.TYPE_17__* @get_output_next(i32 %12, %struct.TYPE_17__* %13, i32 %14)
  store %struct.TYPE_17__* %15, %struct.TYPE_17__** %6, align 8
  %16 = load %struct.TYPE_17__*, %struct.TYPE_17__** %6, align 8
  %17 = icmp ne %struct.TYPE_17__* %16, null
  br i1 %17, label %20, label %18

18:                                               ; preds = %2
  %19 = call i32 @DLOG(i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0))
  br label %62

20:                                               ; preds = %2
  store %struct.TYPE_18__* null, %struct.TYPE_18__** %7, align 8
  %21 = load %struct.TYPE_18__*, %struct.TYPE_18__** %7, align 8
  %22 = load %struct.TYPE_17__*, %struct.TYPE_17__** %6, align 8
  %23 = getelementptr inbounds %struct.TYPE_17__, %struct.TYPE_17__* %22, i32 0, i32 0
  %24 = load i32, i32* %23, align 4
  %25 = call i32 @output_get_content(i32 %24)
  %26 = load i32, i32* @child, align 4
  %27 = call i32 @workspace_is_visible(i32 %26)
  %28 = call i32 @GREP_FIRST(%struct.TYPE_18__* %21, i32 %25, i32 %27)
  %29 = load %struct.TYPE_18__*, %struct.TYPE_18__** %7, align 8
  %30 = icmp ne %struct.TYPE_18__* %29, null
  br i1 %30, label %33, label %31

31:                                               ; preds = %20
  %32 = call i32 @DLOG(i8* getelementptr inbounds ([61 x i8], [61 x i8]* @.str.1, i64 0, i64 0))
  br label %62

33:                                               ; preds = %20
  %34 = load %struct.TYPE_18__*, %struct.TYPE_18__** %3, align 8
  %35 = call %struct.TYPE_18__* @con_get_workspace(%struct.TYPE_18__* %34)
  store %struct.TYPE_18__* %35, %struct.TYPE_18__** %8, align 8
  %36 = load %struct.TYPE_18__*, %struct.TYPE_18__** @focused, align 8
  %37 = load %struct.TYPE_18__*, %struct.TYPE_18__** %3, align 8
  %38 = icmp eq %struct.TYPE_18__* %36, %37
  %39 = zext i1 %38 to i32
  store i32 %39, i32* %9, align 4
  %40 = load %struct.TYPE_18__*, %struct.TYPE_18__** %3, align 8
  %41 = load %struct.TYPE_18__*, %struct.TYPE_18__** %7, align 8
  %42 = load i32, i32* %4, align 4
  %43 = call i32 @attach_to_workspace(%struct.TYPE_18__* %40, %struct.TYPE_18__* %41, i32 %42)
  %44 = load i32, i32* %9, align 4
  %45 = icmp ne i32 %44, 0
  br i1 %45, label %46, label %52

46:                                               ; preds = %33
  %47 = load %struct.TYPE_18__*, %struct.TYPE_18__** %8, align 8
  store %struct.TYPE_18__* %47, %struct.TYPE_18__** @focused, align 8
  %48 = load %struct.TYPE_18__*, %struct.TYPE_18__** %7, align 8
  %49 = call i32 @workspace_show(%struct.TYPE_18__* %48)
  %50 = load %struct.TYPE_18__*, %struct.TYPE_18__** %3, align 8
  %51 = call i32 @con_focus(%struct.TYPE_18__* %50)
  br label %52

52:                                               ; preds = %46, %33
  %53 = load %struct.TYPE_18__*, %struct.TYPE_18__** %3, align 8
  %54 = getelementptr inbounds %struct.TYPE_18__, %struct.TYPE_18__* %53, i32 0, i32 0
  %55 = load i32, i32* %54, align 4
  %56 = call i32 @FREE(i32 %55)
  %57 = load %struct.TYPE_18__*, %struct.TYPE_18__** %3, align 8
  %58 = call i32 @ipc_send_window_event(i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str.2, i64 0, i64 0), %struct.TYPE_18__* %57)
  %59 = load i32, i32* @croot, align 4
  %60 = call i32 @tree_flatten(i32 %59)
  %61 = call i32 (...) @ewmh_update_wm_desktop()
  br label %62

62:                                               ; preds = %52, %31, %18
  ret void
}

declare dso_local %struct.TYPE_17__* @get_output_for_con(%struct.TYPE_18__*) #1

declare dso_local %struct.TYPE_17__* @get_output_next(i32, %struct.TYPE_17__*, i32) #1

declare dso_local i32 @DLOG(i8*) #1

declare dso_local i32 @GREP_FIRST(%struct.TYPE_18__*, i32, i32) #1

declare dso_local i32 @output_get_content(i32) #1

declare dso_local i32 @workspace_is_visible(i32) #1

declare dso_local %struct.TYPE_18__* @con_get_workspace(%struct.TYPE_18__*) #1

declare dso_local i32 @attach_to_workspace(%struct.TYPE_18__*, %struct.TYPE_18__*, i32) #1

declare dso_local i32 @workspace_show(%struct.TYPE_18__*) #1

declare dso_local i32 @con_focus(%struct.TYPE_18__*) #1

declare dso_local i32 @FREE(i32) #1

declare dso_local i32 @ipc_send_window_event(i8*, %struct.TYPE_18__*) #1

declare dso_local i32 @tree_flatten(i32) #1

declare dso_local i32 @ewmh_update_wm_desktop(...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
